--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8155,7 +8155,7 @@ nav a:active {
 
 main {
   position: relative;
-  min-height: calc(100vh - 64px - 50px);
+  min-height: calc(100vh - 64px - 140px);
 }
 main .page-action-btn {
   position: fixed;
@@ -8173,12 +8173,14 @@ main > div {
 #sidenav-left .logo-container {
   padding: 0 16px;
   height: 64px;
-  line-height: 64px;
-  font-size: 24px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: content-box;
 }
 #sidenav-left .logo-container i.material-icons {
+  height: 36px;
   line-height: inherit;
 }
 #sidenav-left i.material-icons,
